--- a/Full-stack/back-end/package.json
+++ b/Full-stack/back-end/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "react-router-dom": "^6.23.1"
   }
 }
